added remaining ui tasks

--- a/UI/us002/index.html
+++ b/UI/us002/index.html
@@ -68,6 +68,7 @@
       }
 
       .header {
+        width: 100%;
         background-color: #9b7ebd;
         color: white;
         padding: 20px;
@@ -144,8 +145,18 @@
       <div class="header">
         <div class="menu">
           <a href="#" id="homeLink">Home</a>
-          <a href="#" id="payBillLink">Pay Bill</a>
-          <a href="#" id="registerComplaintLink">Register Complaint</a>
+          <a
+            href="#"
+            id="payBillLink"
+            onclick="window.location.href='../us002/index.html' "
+            >Pay Bill</a
+          >
+          <a
+            href="#"
+            id="registerComplaintLink"
+            onclick="window.location.href='../us003/index.html' "
+            >Register Complaint</a
+          >
           <a href="#" id="complaintStatusLink">Complaint Status</a>
         </div>
         <div class="logout">
